# pianocoach

./: .env.example  .gitignore  AUDIT.md  PianoCoach.command  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py  seed.py
backend/app/routers/: __init__.py  chat.py  dashboard.py  generator.py  midi.py  milestones.py  pieces.py  reading.py  scales.py  sessions.py  settings.py  tempo.py  videos.py
backend/app/services/: __init__.py  audio_analysis.py  gauges.py  gemini.py  generator.py  midi.py  projections.py  stats.py  summaries.py
backend/tests/: conftest.py  test_api.py  test_audio_metrics.py  test_gauges.py  test_generator.py  test_midi.py  test_projections.py  test_stats.py
desktop/: __init__.py  main.py
docs/: FEATURES.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  demoFixtures.json  index.css  main.tsx  types.ts
frontend/src/components/: Layout.tsx  PianoKeyboard.tsx  ScaleVerify.tsx  Staff.tsx  ui.tsx
frontend/src/lib/: api.ts  format.ts  midi.test.ts  midi.ts  mock.ts  polyrhythm.test.ts  polyrhythm.ts  queries.ts  scaleCheck.test.ts  scaleCheck.ts  skills.test.ts  skills.ts  solfege.test.ts  solfege.ts  useMidi.ts
frontend/src/pages/: Coach.tsx  Dashboard.tsx  Generator.tsx  Journal.tsx  Milestones.tsx  Piano.tsx  Polyrhythm.tsx  Reading.tsx  Repertoire.tsx  Resources.tsx  Scales.tsx  Settings.tsx  Skills.tsx  Solfege.tsx  Tempo.tsx  Videos.tsx
mcp_server/: pyproject.toml
mcp_server/pianocoach_mcp/: __init__.py  server.py
scripts/: build_app.sh  desktop.sh  dev.sh  make_icon.py  setup.sh
