[project]
name = "pianocoach-backend"
version = "0.1.0"
description = "PianoCoach FastAPI backend: API, storage, Gemini, audio analysis"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
    "google-genai>=1.0",
    "librosa>=0.10.2",
    "soundfile>=0.12",
    "numpy>=1.26",
    "mido>=1.3",
    # rtmidi is the MIDI I/O backend for mido. macOS-only marker so CI/Linux
    # never compiles it; the app runs on the user's Mac (Kawai CN201 via USB).
    "python-rtmidi>=1.5 ; sys_platform == 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
